Update web server page title.

--- a/service/templates/layout.html
+++ b/service/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Manage Demo Databases</title>
+  <title>Drewan Tech Platform Demo</title>
 </head>
 <body>
   <div class="message_flashing">
