Add javascript infrastructure to web pages.

--- a/service/templates/demo_execution.html
+++ b/service/templates/demo_execution.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>Do Demo Run Stuff</h1>
+  <div class="demo_execution_content_box">
+    <h1 class="demo_execution_intro">Do Demo Run Stuff</h1>
+    <button type="button" onclick="test_demo_execution_function()">Push Me</button>
+  </div>
+  <script type="text/javascript" src="/scripts/demo_execution_scripts.js"></script>
 {% endblock %}
