--- a/service/templates/demo_initialization.html
+++ b/service/templates/demo_initialization.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>Do Demo Set Up Stuff</h1>
+  <div class="demo_initialization_content_box">
+    <h1 class="demo_initialization_intro">Do Demo Set Up Stuff</h1>
+    <button type="button" onclick="test_demo_initialization_function()">Push Me</button>
+  </div>
+  <script type="text/javascript" src="/scripts/demo_initialization_scripts.js"></script>
 {% endblock %}
