--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-  <h1>Fill In Content</h1>
+  <div class="demo_index_content_box">
+    <h1 class="demo_index_intro">Demo Home Page</h1>
+    <button type="button" onclick="test_demo_index_function()">Push Me</button>
+  </div>
+  <script type="text/javascript" src="/scripts/demo_index_scripts.js"></script>
 {% endblock %}
