Fix javascript loading errors by having web server serve javascript files.

--- a/service/templates/demo_execution.html
+++ b/service/templates/demo_execution.html
@@ -4,5 +4,5 @@
     <h1 class="demo_execution_intro">Do Demo Run Stuff</h1>
     <button type="button" onclick="test_demo_execution_function()">Push Me</button>
   </div>
-  <script type="text/javascript" src="/scripts/demo_execution_scripts.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/demo_execution_scripts.js')}}"></script>
 {% endblock %}
