--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -4,5 +4,5 @@
     <h1 class="demo_index_intro">Demo Home Page</h1>
     <button type="button" onclick="test_demo_index_function()">Push Me</button>
   </div>
-  <script type="text/javascript" src="/scripts/demo_index_scripts.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/demo_index_scripts.js')}}"></script>
 {% endblock %}
