change header class to id for javascript to access.

--- a/service/templates/demo_execution.html
+++ b/service/templates/demo_execution.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="demo_execution_content_box">
-    <h1 class="demo_execution_intro">Do Demo Run Stuff</h1>
+    <h1 id="demo_execution_intro">Do Demo Run Stuff</h1>
     <button type="button" onclick="test_demo_execution_function()">Push Me</button>
   </div>
   <script type="text/javascript" src="{{url_for('static', filename='js/demo_execution_scripts.js')}}"></script>
