--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="demo_index_content_box">
-    <h1 class="demo_index_intro">Demo Home Page</h1>
+    <h1 id="demo_index_intro">Demo Home Page</h1>
     <button type="button" onclick="test_demo_index_function()">Push Me</button>
   </div>
   <script type="text/javascript" src="{{url_for('static', filename='js/demo_index_scripts.js')}}"></script>
