--- a/service/templates/demo_initialization.html
+++ b/service/templates/demo_initialization.html
@@ -4,15 +4,15 @@
     <h1 id="demo_initialization_intro">Do Demo Set Up Stuff</h1>
     <button type="button" onclick="test_demo_initialization_function()">Push Me</button>
     <h2>Random Matrix Generation Service Set Up</h2>
-    <button type="button" onclick="create_random_matrix_generation_database()">Create Database</button>
-    <button type="button" onclick="create_random_matrix_generation_tables()">Create Tables</button>
-    <button type="button" onclick="drop_random_matrix_generation_tables()">Drop Tables</button>
-    <button type="button" onclick="drop_random_matrix_generation_database()">Drop Database</button>
+    <button type="button" onclick="simple_ajax_request('PUT', 'random-matrix-generation/create_matrix_database')">Create Database</button>
+    <button type="button" onclick="simple_ajax_request('PUT', 'random-matrix-generation/create_matrix_tables')">Create Tables</button>
+    <button type="button" onclick="simple_ajax_request('DELETE', 'random-matrix-generation/drop_matrix_database')">Drop Tables</button>
+    <button type="button" onclick="simple_ajax_request('DELETE', 'random-matrix-generation/drop_matrix_tables')">Drop Database</button>
     <h2>Matrix Multiplication Service Set Up</h2>
-    <button type="button" onclick="create_matrix_multiplication_database()">Create Database</button>
-    <button type="button" onclick="create_matrix_multiplication_tables()">Create Tables</button>
-    <button type="button" onclick="drop_matrix_multiplication_tables()">Drop Tables</button>
-    <button type="button" onclick="drop_matrix_multiplication_database()">Drop Database</button>
+    <button type="button" onclick="simple_ajax_request('PUT', 'matrix-multiplication/create_matrix_database')">Create Database</button>
+    <button type="button" onclick="simple_ajax_request('PUT', 'matrix-multiplication/create_matrix_tables')">Create Tables</button>
+    <button type="button" onclick="simple_ajax_request('DELETE', 'matrix-multiplication/drop_matrix_database')">Drop Tables</button>
+    <button type="button" onclick="simple_ajax_request('DELETE', 'matrix-multiplication/drop_matrix_tables')">Drop Database</button>
   </div>
   <script type="text/javascript" src="{{url_for('static', filename='js/demo_initialization_scripts.js')}}"></script>
 {% endblock %}
